--- a/src/index/index.styl
+++ b/src/index/index.styl
@@ -1,4 +1,3 @@
-@import '../common/styles/base.styl';
-@import '../common/styles/grid.styl';
-
-@import 'styles/test.styl';
+body {
+  background: aqua;
+}
