--- a/src/ex-cast/ex-cast.scss
+++ b/src/ex-cast/ex-cast.scss
@@ -2,6 +2,6 @@
 @import'./styles/fonts.scss';
 @import'./styles/variables';
 @import'./styles/mixins';
-@import'./styles/buttons';
+@import'./styles/base';
 @import'./styles/main.scss';
 // @import'./styles/hw8base';
